--- a/stylesheet/pageStyle.css
+++ b/stylesheet/pageStyle.css
@@ -1,3 +1,11 @@
 body {
     padding: 20px;
   }
+
+  #canvasPlaceholder{
+    margin: 0;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+  }
